--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ border-radius: 50%;
 
 <!-- Image in Display Container -->
 <div class="w3-display-container w3-content" style="max-width:1500px;">
-<img class="w3-image" src="discover-qatar-qatar-airways-holidays.JPG" alt="Discover Qatar" width="100%">
+<img class="w3-image" src="dq.jpg" alt="Discover Qatar" width="100%">
 <div class="w3-display-middle w3-margin-top w3-center">
 <h1 class="w3-xxlarge w3-text-white w3-wide">
 <span class="w3-padding w3-black w3-opacity-min"><b>Discover Qatar</b></span>
