--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Guests can discover the unique heritage of Downtown Doha as they wander through 
 </p>
 <hr class="new">
 
-<h2>2. Discover Souq Waqifa</h2>
+<h2>2. Discover Souq Waqif</h2>
 
 <p>
 
@@ -209,7 +209,7 @@ Discover Qatar facilitates Welcome Home Hotel quarantine packages in accordance 
 [10] "Discover regional cuisine". discoverqatar.com. Discover qatar. <a href="https://www.discoverqatar.qa/discover-regional-cuisine-at-souq-waqif-with-meal-1/overview"> https://www.discoverqatar.qa/discover-regional-cuisine-at-souq-waqif-with-meal-1/overview</a><br />
 [11] "Meet and assist services". discoverqatar.com. Discover Qatar. <a href="https://www.discoverqatar.qa/services/"> https://www.discoverqatar.qa/services/ </a> <br />
 [12] "Discover Qatar opens 2 day hotel quarantine booking". iloveqatar.net. <br /> <a href="https://www.iloveqatar.net/coronavirus/travelVisa/discover-qatar-hotel-quarantine-booking-for-travellers-from-bangladesh-india-nepal-pakistan-philippines-sri-lanka"> https://www.iloveqatar.net/coronavirus/travelVisa/discover-qatar-hotel-quarantine-booking-for-travellers-from-bangladesh-india-nepal-pakistan-philippines-sri-lanka </a> <br />
-]13] <a href="https://twitter.com/qatarairways/status/1386760938020294656"> https://twitter.com/qatarairways/status/1386760938020294656 </a> <br />
+[13] <a href="https://twitter.com/qatarairways/status/1386760938020294656"> https://twitter.com/qatarairways/status/1386760938020294656 </a> <br />
 [14]  "MOPH Travel and Return Policy". moph.gov.qa. <a href="https://covid19.moph.gov.qa/EN/travel-and-return-policy/Pages/default.aspx"> https://covid19.moph.gov.qa/EN/travel-and-return-policy/Pages/default.aspx</a> <br />
 </p> 
 <hr class="new">
