--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ text-align: justify;
 margin-left:50px;
 
 }
+ul {
+  padding: 10px;
+}
+ul li {
+  margin: 5px;
+}
  p{
 text-align: justify;
 overflow-wrap: break-word; 
@@ -106,15 +112,14 @@ border-radius: 50%;
 <hr class="new">
 
 <h1>Values</h1>
-<p>Pride in Qatar. The Company take pride in Qatar's achievement & growth. [3]
-
-Customer First. The Company delivers on the service promise.
-
-Driving Excellence. The Company strives for excellence in everything they do.
-
-Honest & Loyal. Discover Qatar works with the utmost dedication and devotion.
-
-One Team. The Company contribute to the shared vision of the Qatar Airways group. </p>
+<p> <ul>
+  <li>Pride in Qatar. The Company take pride in Qatar's achievement & growth. [3]</li>
+  <li>Customer First. The Company delivers on the service promise.</li>
+  <li>Driving Excellence. The Company strives for excellence in everything they do.</li>
+  <li>Honest & Loyal. Discover Qatar works with the utmost dedication and devotion.</li>
+<li>One Team. The Company contribute to the shared vision of the Qatar Airways group.</li>
+</ul>
+ </p>
 <hr class="new">
 <h1>Tours</h1>
 <hr class="new">
