--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ The experience of a lifetime awaits guests with spectacular hot air balloon flig
 
 Frequency: Daily | Duration: 4 hours  <br /> 
 <br /> 
-Guests will discover the remarkable desert landscape where sand dunes spill into the azure waters of Arabian Peninsula. Qualified desert drivers will take them on a life time adventure, traveling through the dramatic sand dunes to Khor Al Adaid, a large tidal embayment recognized for its outstanding natural heritage value. [9]Guests will have an opportunity to take in the magnificent desert landscape, visit the towering Sheraton Dune and marvel at the azure waters of the Arabian Sea before we depart for a brief comfort stop at our desert camp on the way back to Doha. 
+Guests will discover the remarkable desert landscape where sand dunes spill into the azure waters of Arabian Peninsula. Qualified desert drivers will take them on a life time adventure, traveling through the dramatic sand dunes to Khor Al Adaid, a large tidal embayment recognized for its outstanding natural heritage value. [9] Guests will have an opportunity to take in the magnificent desert landscape, visit the towering Sheraton Dune and marvel at the azure waters of the Arabian Sea before they depart for a brief comfort stop at our desert camp on the way back to Doha. 
 
 </p>
 <hr class="new">
@@ -187,7 +187,7 @@ Guests will discover the hidden gems of the Souq Waqif through a unique cultural
 <h2>Airport meet and assist</h2>
 <p>
 <br /> 
-The service can be booked online or at Al Maha services desk at the airport. Each journey to Qatar begins and ends at Hamad International Airport. [11] Meet and Assist service is an exclusive experience that personalizes guests’ arrival, departure and transit journey from/to Hamad International Airport. Private transfers offer seamless door-to-door transfers for customers in all cabin classes. Guests can choose from our standard and luxury vehicles options and make every journey safe and reliable with Discover Qatar. 
+The service can be booked online or at Al Maha services desk at the airport. Each journey to Qatar begins and ends at Hamad International Airport. [11] Meet and Assist service is an exclusive experience that personalizes guests’ arrival, departure and transit journey from/to Hamad International Airport. Private transfers offer seamless door-to-door transfers for customers in all cabin classes. Guests can choose from standard and luxury vehicles options and make every journey safe and reliable with Discover Qatar. 
 
 </p>
 <hr class="new">
