--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ border-radius: 50%;
 
 <h1>Values</h1>
 <p> <ul>
-  <li>Pride in Qatar. The Company take pride in Qatar's achievement & growth. [3]</li>
+  <li>Pride in Qatar. The Company takes pride in Qatar's achievement & growth. [3]</li>
   <li>Customer First. The Company delivers on the service promise.</li>
   <li>Driving Excellence. The Company strives for excellence in everything they do.</li>
   <li>Honest & Loyal. Discover Qatar works with the utmost dedication and devotion.</li>
-<li>One Team. The Company contribute to the shared vision of the Qatar Airways group.</li>
+<li>One Team. The Company contributes to the shared vision of the Qatar Airways group.</li>
 </ul>
  </p>
 <hr class="new">
