--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <title>Discover Qatar</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="f7Ys2G9uFC_fNUf-4AehOm1AMZxbzJIcSyGVI5kJRHc" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-win8.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2019.css">
