--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <meta charset="UTF-8">
 <title>Discover Qatar</title>
+<meta name="description" content="Discover Qatar - information">
+  <meta name="keywords" content=" Discover Qatar, Doha, tours, Discover Doha, Discover Souq Waqif, Discover Arabic Coffee traditions, Discover Qatar by Sky, Discover dunes and the Inland Sea, Regional Cuisine, Airport meet and assist, Home Hotel Quarantine packages ">
+ <meta name="author" content="Ivana Vostinic">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="f7Ys2G9uFC_fNUf-4AehOm1AMZxbzJIcSyGVI5kJRHc" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
