--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Guests will discover the ancient coffee traditions of Qatar and experience true 
 
 <br /> Frequency: Daily (1 November - 31 March) | Duration: 3 hours <br /> 
 <br /> 
-The experience of a lifetime awaits guests with spectacular hot air balloon flights. Guests are taken to the skies in a hot air balloon and can enjoy panoramic views over the city or desert and experience Qatar from the air. Guests should be ready before sunrise as we take to the sky to see the sun lifting behind a dramatic land or cityscape. [8] Back on land, guests are treated with a delightful breakfast to end a truly exhilarating experience. 
+The experience of a lifetime awaits guests with spectacular hot air balloon flights. Guests are taken to the skies in a hot air balloon and can enjoy panoramic views over the city or desert and experience Qatar from the air. Guests should be ready before sunrise as they will be taken to the sky to see the sun lifting behind a dramatic land or cityscape. [8] Back on land, guests are treated with a delightful breakfast to end a truly exhilarating experience. 
 
 </p>
 <hr class="new">
