--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ border-radius: 50%;
 
 <!-- Navbar (Sits on top) -->
 <div class="w3-top w3-bar w3-theme w3-wide w3-padding w3-card">
-<a href="https://www.discoverqatar.qa/" class="w3-bar-item w3-hover-none w3-button"><img id="logo" src="logo.jpg" alt="Discover Qatar logo"><b></b> </a>
+<a href="https://www.discoverqatar.qa/" class="w3-bar-item w3-hover-none w3-button"><img id="logo" src="logo3.png" alt="Discover Qatar logo"><b></b> </a>
 
 <!-- Float links to the right. Hide them on small screens -->
 <div class="w3-right w3-hide-small">
