--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@ Guests will discover the hidden gems of the Souq Waqif through a unique cultural
 </p>
 
 <hr class="new">
+<p> The Discover Qatar expedition cruise is a new product introduced in April 2021 that gives the opportunity to travelers to access the Al Shaheen restricted marine zone and witness the Whale Shark gathering along with coastal exploration adventure. Between the summer months of April and September, during their annual migration to the region, Whale Sharks are found feeding in groups of hundreds in the Al Shaheen marine zone within the Arabian Gulf
+</p>
+<hr class="new">
 <h2>Airport meet and assist</h2>
 <p>
 <br /> 
