--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ border-radius: 50%;
 
 <!-- Navbar (Sits on top) -->
 <div class="w3-top w3-bar w3-theme w3-wide w3-padding w3-card">
-<a href="https://www.discoverqatar.qa/" class="w3-bar-item w3-hover-none w3-button"><img id="logo" src="logo3.png" alt="Discover Qatar logo"><b></b> </a>
+<a href="#" class="w3-bar-item w3-hover-none w3-button"><b>Discover Qatar</b> </a>
 
 <!-- Float links to the right. Hide them on small screens -->
 <div class="w3-right w3-hide-small">
@@ -92,7 +92,7 @@ border-radius: 50%;
 
 <!-- Image in Display Container -->
 <div class="w3-display-container w3-content" style="max-width:1500px;">
-<img class="w3-image" src="dq1.jpg" alt="Discover Qatar" width="100%">
+<img class="w3-image" src="" alt="Discover Qatar" width="100%">
 <div class="w3-display-middle w3-margin-top w3-center">
 <h1 class="w3-xxlarge w3-text-white w3-wide">
 <span class="w3-padding w3-black w3-opacity-min"><b>Discover Qatar</b></span>
