--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ border-top: 1px dotted purple;
 #1 {
 text-align: justify; 
 margin-left:50px;
-
+max-width:1100px;
 }
 ul {
   padding: 10px;
@@ -87,7 +87,7 @@ border-radius: 50%;
 </div>
 
 <!-- Page Start -->
-<div id="home" class="w3-content" style="max-width:1000px">
+<div id="home" class="w3-content" style="max-width:1100px">
 
 
 </div>
