--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ border-radius: 50%;
 
 <!-- Navbar (Sits on top) -->
 <div class="w3-top w3-bar w3-theme w3-wide w3-padding w3-card">
-<a href="#" class="w3-bar-item w3-hover-none w3-button"><b>Discover Qatar</b> </a>
+<a href="https://vivana-lab.github.io/discoverQatarbrief/" class="w3-bar-item w3-hover-none w3-button"><b>Discover Qatar</b> </a>
 
 <!-- Float links to the right. Hide them on small screens -->
 <div class="w3-right w3-hide-small">
@@ -88,7 +88,9 @@ border-radius: 50%;
 
 <!-- Page Start -->
 <div id="home" class="w3-content" style="max-width:1100px">
-
+<br /> 
+<br /> 
+<br /> 
 
 </div>
 <div id="1">
