--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ The experience of a lifetime awaits guests with spectacular hot air balloon flig
 
 Frequency: Daily | Duration: 4 hours  <br /> 
 <br /> 
-Guests will discover the remarkable desert landscape where sand dunes spill into the azure waters of Arabian Peninsula. Qualified desert drivers will take them on a life time adventure, traveling through the dramatic sand dunes to Khor Al Adaid, a large tidal embayment recognized for its outstanding natural heritage value. [9] Guests will have an opportunity to take in the magnificent desert landscape, visit the towering Sheraton Dune and marvel at the azure waters of the Arabian Sea before they depart for a brief comfort stop at our desert camp on the way back to Doha. 
+Guests will discover the remarkable desert landscape where sand dunes spill into the azure waters of Arabian Peninsula. Qualified desert drivers will take them on a life time adventure, traveling through the dramatic sand dunes to Khor Al Adaid, a large tidal embayment recognized for its outstanding natural heritage value. [9] Guests will have an opportunity to take in the magnificent desert landscape, visit the towering Sheraton Dune and marvel at the azure waters of the Arabian Sea before they depart for a brief comfort stop at desert camp on the way back to Doha. 
 
 </p>
 <hr class="new">
@@ -182,7 +182,7 @@ Guests will discover the hidden gems of the Souq Waqif through a unique cultural
 
 <hr class="new">
 <h2>7. Discover Qatar expedition cruise</h2>
-<p> The Discover Qatar expedition cruise is a new product introduced in April 2021 that gives the opportunity to travelers to access the Al Shaheen restricted marine zone and witness the Whale Shark gathering along with coastal exploration adventure. Between the summer months of April and September, during their annual migration to the region, Whale Sharks are found feeding in groups of hundreds in the Al Shaheen marine zone within the Arabian Gulf
+<p> The Discover Qatar expedition cruise is a new product introduced in April 2021 that gives the opportunity to travelers to access the Al Shaheen restricted marine zone and witness the Whale Shark gathering along with coastal exploration adventure. Between the summer months of April and September, during their annual migration to the region, Whale Sharks are found feeding in groups of hundreds in the Al Shaheen marine zone within the Arabian Gulf.
 </p>
 <hr class="new">
 <h2>Airport meet and assist</h2>
