--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@ text-align: justify;
 overflow-wrap: break-word; 
  margin-left:20px;
  }
-
+ #2{
+text-align: left;
+overflow-wrap: break-word; 
+ margin-left:20px;
+ }
 h1, h2{
 
  margin-left:10px;
@@ -201,7 +205,7 @@ Discover Qatar facilitates Welcome Home Hotel quarantine packages in accordance 
 </p>
 <hr class="new">
 <h2>References</h2>
-<p>
+<p id="2">
 <br /> 
 [1]  DiscoverQatar <a href = "https://www.discoverqatar.qa/trade-partners/"> https://www.discoverqatar.qa/trade-partners/</a>. <br /> 
 [2]  Qatar Airways [<a href = "www.qatarairways.com">www.qatarairways.com  </a> ] <br /> 
