--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@ text-align: justify;
 overflow-wrap: break-word; 
  margin-left:20px;
  }
- #2{
-text-align: left;
-overflow-wrap: break-word; 
- margin-left:20px;
- }
+ 
 h1, h2{
 
  margin-left:10px;
@@ -205,22 +201,22 @@ Discover Qatar facilitates Welcome Home Hotel quarantine packages in accordance 
 </p>
 <hr class="new">
 <h2>References</h2>
-<p id="2">
+<p >
 <br /> 
-[1]  DiscoverQatar <a href = "https://www.discoverqatar.qa/trade-partners/"> https://www.discoverqatar.qa/trade-partners/</a>. <br /> 
-[2]  Qatar Airways [<a href = "www.qatarairways.com">www.qatarairways.com  </a> ] <br /> 
-[3]  qatarairways.com <a href = "http://www.qataraviation.com/page/about-us/about-qas"> http://www.qataraviation.com/page/about-us/about-qas</a>  <br /> 
-[4]  Discover Qatar tours. qatarairways.com. Qatar Airways <a href="https://www.qatarairways.com/en-qa/offers/doha-city-tour.html">https://www.qatarairways.com/en-qa/offers/doha-city-tour.html</a>. <br />
-[5]  discoverqatar/discover doha tour <a href="https://www.discoverqatar.qa/discover-doha/overview">https://www.discoverqatar.qa/discover-doha/overview </a> <br /> 
-[6] discoverqatar/discover the souq waqif tour <a href="https://www.discoverqatar.qa/discover-the-souq-waqif-1/overview">https://www.discoverqatar.qa/discover-the-souq-waqif-1/overview </a> <br />
-[7]  "Discover Arabic coffee traditions". discoverqatar.com <a href= "https://www.discoverqatar.qa/discover-traditional-arabic-coffee-ceremony/overview">https://www.discoverqatar.qa/discover-traditional-arabic-coffee-ceremony/overview </a>. <br />
-[8]  "Discover Qatar by the sky". discoverqatar.com. <a href = "https://www.discoverqatar.qa/discover-qatar-by-sky-2/overview"> https://www.discoverqatar.qa/discover-qatar-by-sky-2/overview</a> <br />
-[9]  "Discover the dunes and the Inland Sea". discoverqatar.com  <a href="https://www.discoverqatar.qa/discover-the-dunes-and-inland-sea-75/overview">https://www.discoverqatar.qa/discover-the-dunes-and-inland-sea-75/overview </a><br />
-[10] "Discover regional cuisine". discoverqatar.com. Discover qatar. <a href="https://www.discoverqatar.qa/discover-regional-cuisine-at-souq-waqif-with-meal-1/overview"> https://www.discoverqatar.qa/discover-regional-cuisine-at-souq-waqif-with-meal-1/overview</a><br />
-[11] "Meet and assist services". discoverqatar.com. Discover Qatar. <a href="https://www.discoverqatar.qa/services/"> https://www.discoverqatar.qa/services/ </a> <br />
-[12] "Discover Qatar opens 2 day hotel quarantine booking". iloveqatar.net. <br /> <a href="https://www.iloveqatar.net/coronavirus/travelVisa/discover-qatar-hotel-quarantine-booking-for-travellers-from-bangladesh-india-nepal-pakistan-philippines-sri-lanka"> https://www.iloveqatar.net/coronavirus/travelVisa/discover-qatar-hotel-quarantine-booking-for-travellers-from-bangladesh-india-nepal-pakistan-philippines-sri-lanka </a> <br />
-[13] <a href="https://twitter.com/qatarairways/status/1386760938020294656"> https://twitter.com/qatarairways/status/1386760938020294656 </a> <br />
-[14]  "MOPH Travel and Return Policy". moph.gov.qa. <a href="https://covid19.moph.gov.qa/EN/travel-and-return-policy/Pages/default.aspx"> https://covid19.moph.gov.qa/EN/travel-and-return-policy/Pages/default.aspx</a> <br />
+<p >[1]  DiscoverQatar <a href = "https://www.discoverqatar.qa/trade-partners/"> https://www.discoverqatar.qa/trade-partners/</a>. <br /> </p>
+<p >[2]  Qatar Airways [<a href = "www.qatarairways.com">www.qatarairways.com  </a> ] <br /> </p>
+<p >[3]  qatarairways.com <a href = "http://www.qataraviation.com/page/about-us/about-qas"> http://www.qataraviation.com/page/about-us/about-qas</a>  <br /> </p>
+<p >[4]  Discover Qatar tours. qatarairways.com. Qatar Airways <a href="https://www.qatarairways.com/en-qa/offers/doha-city-tour.html">https://www.qatarairways.com/en-qa/offers/doha-city-tour.html</a>. <br /></p>
+<p >[5]  discoverqatar/discover doha tour <a href="https://www.discoverqatar.qa/discover-doha/overview">https://www.discoverqatar.qa/discover-doha/overview </a> <br /> </p>
+<p >[6] discoverqatar/discover the souq waqif tour <a href="https://www.discoverqatar.qa/discover-the-souq-waqif-1/overview">https://www.discoverqatar.qa/discover-the-souq-waqif-1/overview </a> <br /></p>
+<p >[7]  "Discover Arabic coffee traditions". discoverqatar.com <a href= "https://www.discoverqatar.qa/discover-traditional-arabic-coffee-ceremony/overview">https://www.discoverqatar.qa/discover-traditional-arabic-coffee-ceremony/overview </a>. <br /></p>
+<p >[8]  "Discover Qatar by the sky". discoverqatar.com. <a href = "https://www.discoverqatar.qa/discover-qatar-by-sky-2/overview"> https://www.discoverqatar.qa/discover-qatar-by-sky-2/overview</a> <br /></p>
+<p >[9]  "Discover the dunes and the Inland Sea". discoverqatar.com  <a href="https://www.discoverqatar.qa/discover-the-dunes-and-inland-sea-75/overview">https://www.discoverqatar.qa/discover-the-dunes-and-inland-sea-75/overview </a><br /></p>
+<p >[10] "Discover regional cuisine". discoverqatar.com. Discover qatar. <a href="https://www.discoverqatar.qa/discover-regional-cuisine-at-souq-waqif-with-meal-1/overview"> https://www.discoverqatar.qa/discover-regional-cuisine-at-souq-waqif-with-meal-1/overview</a><br /></p>
+<p >[11] "Meet and assist services". discoverqatar.com. Discover Qatar. <a href="https://www.discoverqatar.qa/services/"> https://www.discoverqatar.qa/services/ </a> <br /></p>
+<p >[12] "Discover Qatar opens 2 day hotel quarantine booking". iloveqatar.net. <br /> <a href="https://www.iloveqatar.net/coronavirus/travelVisa/discover-qatar-hotel-quarantine-booking-for-travellers-from-bangladesh-india-nepal-pakistan-philippines-sri-lanka"> https://www.iloveqatar.net/coronavirus/travelVisa/discover-qatar-hotel-quarantine-booking-for-travellers-from-bangladesh-india-nepal-pakistan-philippines-sri-lanka </a> <br /></p>
+<p >[13] <a href="https://twitter.com/qatarairways/status/1386760938020294656"> https://twitter.com/qatarairways/status/1386760938020294656 </a> <br /></p>
+<p >[14]  "MOPH Travel and Return Policy". moph.gov.qa. <a href="https://covid19.moph.gov.qa/EN/travel-and-return-policy/Pages/default.aspx"> https://covid19.moph.gov.qa/EN/travel-and-return-policy/Pages/default.aspx</a> <br /></p>
 </p> 
 <hr class="new">
 <p>
