--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ text-align: justify;
 overflow-wrap: break-word; 
  margin-left:20px;
  }
-p.3 {
+.3 {
 
-text:align:center;} 
+text-align: justify;
+text-justify:inter-word;} 
 h1, h2{
 
  margin-left:10px;
